// Vitest Snapshot v1

exports[`Checkbox > should render default correctly 1`] = `
"<label class=\\"fx-checkbox fx-horizontal-hairline\\"><input class=\\"fx-checkbox_input fx-form-input\\" type=\\"checkbox\\" name=\\"\\" value=\\"\\">
  <div class=\\"fx-checkbox_box\\">
    <icon-stub icon=\\"[object Object]\\" spin=\\"false\\" size=\\"0\\" width=\\"0\\" height=\\"0\\" class=\\"fx-checkbox_icon\\"></icon-stub>
    <icon-stub icon=\\"[object Object]\\" spin=\\"false\\" size=\\"0\\" width=\\"0\\" height=\\"0\\" class=\\"fx-checkbox_checked-icon\\"></icon-stub>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > should render prop disabled=true correctly 1`] = `
"<label class=\\"fx-checkbox fx-horizontal-hairline disabled\\"><input class=\\"fx-checkbox_input fx-form-input\\" type=\\"checkbox\\" name=\\"\\" disabled=\\"\\" value=\\"\\">
  <div class=\\"fx-checkbox_box\\">
    <icon-stub icon=\\"[object Object]\\" spin=\\"false\\" size=\\"0\\" width=\\"0\\" height=\\"0\\" class=\\"fx-checkbox_icon\\"></icon-stub>
    <icon-stub icon=\\"[object Object]\\" spin=\\"false\\" size=\\"0\\" width=\\"0\\" height=\\"0\\" class=\\"fx-checkbox_checked-icon\\"></icon-stub>
    <!--v-if-->
  </div>
</label>"
`;

exports[`CheckboxGroup > should render 2 Checkbox slot correctly 1`] = `
"<div class=\\"fx-checkbox-group vertical\\"><label class=\\"fx-checkbox fx-horizontal-hairline\\"><input class=\\"fx-checkbox_input fx-form-input\\" type=\\"checkbox\\" name=\\"\\" value=\\"\\">
    <div class=\\"fx-checkbox_box\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" class=\\"fx-icon fx-checkbox_icon\\">
        <path d=\\"M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z\\"></path>
      </svg><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" class=\\"fx-icon fx-checkbox_checked-icon\\">
        <path d=\\"M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM695.5 365.7l-210.6 292a31.8 31.8 0 01-51.7 0L308.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H689c6.5 0 10.3 7.4 6.5 12.7z\\"></path>
      </svg>
      <!--v-if-->
    </div>
  </label><label class=\\"fx-checkbox fx-horizontal-hairline\\"><input class=\\"fx-checkbox_input fx-form-input\\" type=\\"checkbox\\" name=\\"\\" value=\\"\\">
    <div class=\\"fx-checkbox_box\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" class=\\"fx-icon fx-checkbox_icon\\">
        <path d=\\"M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z\\"></path>
      </svg><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" class=\\"fx-icon fx-checkbox_checked-icon\\">
        <path d=\\"M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM695.5 365.7l-210.6 292a31.8 31.8 0 01-51.7 0L308.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H689c6.5 0 10.3 7.4 6.5 12.7z\\"></path>
      </svg>
      <!--v-if-->
    </div>
  </label></div>"
`;

exports[`CheckboxGroup > should render prop disabled=true correctly 1`] = `"<div class=\\"fx-checkbox-group vertical disabled\\"></div>"`;
